plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '2.6.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

def camelVersion = '2.25.4'

group = 'uk.gov.digital.ho.hocs'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

plugins.withType(JacocoPlugin) {
    tasks["test"].finalizedBy 'jacocoTestReport'
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
    reports {
        xml.required = true
        html.required = false
        csv.required = false
        //for XML
        xml.destination file("${buildDir}/reports/jacoco.xml")
    }
}


dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude(module: 'spring-boot-starter-tomcat')
    }

    implementation('org.springframework.boot:spring-boot-starter-undertow')
    implementation('org.springframework.boot:spring-boot-starter-actuator')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation('org.springframework.boot:spring-boot-starter-json')
    implementation('org.springframework.boot:spring-boot-starter-cache')
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation('com.vladmihalcea:hibernate-types-52:2.14.0')


    implementation('net.logstash.logback:logstash-logback-encoder:7.0.1')
    implementation('org.springdoc:springdoc-openapi-ui:1.5.12')

    implementation('com.github.ben-manes.caffeine:caffeine:3.0.5')
    implementation("org.apache.camel:camel-spring-boot-starter:${camelVersion}")
    implementation("org.apache.camel:camel-aws:${camelVersion}")
    implementation('com.amazonaws:aws-java-sdk:1.12.129')
    implementation 'org.json:json:20211205'

    implementation'org.flywaydb:flyway-core'
    runtimeOnly 'org.postgresql:postgresql:42.3.1'

    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.springframework:spring-context-indexer:5.3.14'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    testImplementation('org.springframework.boot:spring-boot-starter-test')
    testImplementation("org.apache.camel:camel-test-spring:${camelVersion}")
    testImplementation('org.assertj:assertj-core')
    testImplementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
}

jar {
    enabled = false
}
